# SlaterGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SlaterGPUConfig.cmake.in  build.sh  env.set.local0  env_new_May31  go  go_2RDM  pixi.toml  recipe.yaml
.github/: pull_request_template.md
.github/actions/setup-build-env/: action.yml  install_nvhpc.sh
.github/workflows/: ci.yml  cmake.yml  debug_ci.yml  install_nvhpc.sh  slater-gpu-base.yml  test_tmate.yml
examples/: CMakeLists.txt  compare.py  main.cpp  run.sh  run_geom_timings.sh  test_output.py
examples/beh2_VK6/: A  Ciap  GEOM  out
examples/beh2_VK6/zest/: A  CA  Ciap  EIG  HF.molden  Pao  SENT  out
examples/beh2_ri5/: A_ref  Be.basis  Ciap_ref  SENT_ref  out_ref  pVp_ref
examples/ch2_VK4/: A  Ciap  GEOM  GRID  SENT  out  out_2
examples/ch2_VK4/zest/: A  CA  Ciap  EIG  HF.molden  Pao  SENT  out
examples/ch2_ri5/: A_ref  C.basis  Ciap_ref  out_ref  pVp_ref
examples/ch4_VK5/: A  out
examples/ch4_VK5/zest/: A  CA  EIG  HF.molden  Pao  SENT  out
examples/ch4_ri5/: A_ref  GEOM  GRIDPS  H.basis  SENT_ref  out_ref  pVp_ref
examples/geom_1/: A_ref  C.basis  Ciap_ref  GEOM  H.basis  SENT_ref  hf.out  pVp_ref  test_output.py
examples/geom_2/: A_ref  GEOM  SENT_ref  pVp_ref
examples/geom_3/: GEOM  SENT_ref  pVp_ref
examples/geom_4/: SENT_ref  pVp_ref
examples/geom_5/: GEOM  SENT_ref  pVp_ref
examples/geom_ps/: A_ref  C.basis  Ciap_ref  GEOM  GRIDPS  O.basis  SENT_ref  hf.out  pVp_ref  run.sh
examples/geom_timings/: CMakeLists.txt  main.cpp
examples/geom_timings/geom_3/: H.basis
examples/geom_timings/geom_4/: GEOM
examples/h2_VK2/: A  Ciap  out
examples/h2_VK2/zest/: A  CA  Ciap  EIG  GEOM  H.basis  HF.molden  Pao  SENT  olintsd  out
examples/h2_gaussian_basis/: GEOM  H.basis  aux  basis
examples/h2_ri5/: A_ref  SENT_ref
examples/h2_ri5_lmax/: A_ref  Ciap_ref  integrals_ref  pVp_ref
examples/h2_ri5_test/: out
examples/h2_ri5_test2/: Ciap_ref  out  out_ref
examples/lih_VK1/: A  Ciap  GEOM  Li.basis  compare.py  out  pVp_ref
examples/lih_VK1/zest/: A  CA  Ciap  EIG  GEOM  HF.molden  Pao  SENT  out
examples/lih_qz_gaussian/: A_ref  EPS  GEOM  SENT_ref  aux  basis  log.err  log.out  run.sh
examples/lih_ri5/: A_ref  Ciap_ref  SENT_ref  out_ref  pVp_ref
examples/noplus_VK3/: A  GRIDPS  N.basis  out
examples/noplus_VK3/zest/: A  CA  EIG  GEOM  HF.molden  Pao  SENT  out
examples/noplus_ri5/: A_ref  O.basis  SENT_ref  out_ref  pVp_ref
examples/rel_hamiltonian/: CMakeLists.txt  main.cpp  rel_ham.sh
examples/test_gto_grid/: CMakeLists.txt  main.cpp
include/: Vinr.h  becke.h  braggslater.h  cint.h  cintprep.h  cintwrapper.h  cpu_util.h  cuda_util.h  cusp.h  elements.h  fp_def.h  gamma.h  gauss.h  get_rcutoff.h  gpu_util.h  grid_util.h  gto_grid.h  integrals.h  isotopes.h  jellium_ints.h  lebedev2.h  murak.h  opt.h  pVp.h  print.h  prosph.h  quad.h  read.h  reduce.h  rel.h  scf_util.h  sortUtil.h  spherical.h  symm.h  write.h
include/SlaterGPU/: fp_def.h
rattler-build/: recipe.yaml
src/: CMakeLists.txt
src/integrals/: CMakeLists.txt  Vinr.cpp  becke.cpp  becke2.cpp  braggslater.h  cpu_util.cpp  cuda_util.cpp  cusp.cpp  gamma.cpp  gauss.cpp  get_rcutoff.cpp  gpu_util.cpp  grid_util.cpp  grid_util.h  hess.cpp  integrals.cpp  integrals.h  integrals_aux.cpp  integrals_d.cpp  integrals_ps.cpp  jellium_ints.cpp  jsetup.cpp  lebedev2.cpp  murak.cpp  murak.h  opt.cpp  pVp.cpp  pVpd.cpp  prosph.cpp  ps_first_second_order.cpp  ps_grid.cpp  quad.cpp  reduce.cpp  scf_util.cpp  spherical.cpp  spherical.h  sphericald.cpp  symm.cpp  utils.cpp  utils.h
src/libcintw/: CMakeLists.txt  cintprep.cpp  cintwrapper.cpp  cintwrapper.h  elements.h  gto_grid.cpp  gto_grid.h
src/libio/: CMakeLists.txt  molden.cpp  print.cpp  qr.h  read.cpp  read.h  write.cpp  write.h
src/librel/: CMakeLists.txt  rel.cpp  rel.h
